Improve ViaDirectStreetRouter tests